Fix al ancho de pantalla overflow

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -68,13 +68,14 @@ section {
     @include make-row();
 }
 .master-container-wrapper{
+	display: block;
+	max-width: 100vw;
 	width: 100%;
 }
 .master-container{
 	display: block;
 	margin: 0 auto;
 	width: 100%;
-	max-width: none;
 	@include media-breakpoint-up(xl) {
 		max-width: $max-window-width;
 		box-shadow: 0px 0px 9px #808080;
